--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/image/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -71,6 +72,20 @@ flutter:
         - asset: assets/fonts/Lexend_Deca/LexendDeca-Regular.ttf
         - asset: assets/fonts/Lexend_Deca/LexendDeca-Light.ttf
           weight: 300
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Lexend_Deca/LexendDeca-Black.ttf
+          weight: 900
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
